--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
 }
 
 .main {
-  min-height: 80vh;
+  min-height: 60vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
@@ -61,8 +61,7 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: 'Roboto', sans-serif;
 }
 
 .grid {
